--- a/package.json
+++ b/package.json
@@ -1,25 +1,12 @@
 {
-  "name": "uwkirio",
-  "version": "1.0.0",
-  "description": "",
-  "main": "build/client.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "node build/server.js",
-    "client": "node build/client.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/kathrynbrusewitz/uwkirio.git"
-  },
-  "author": "",
-  "license": "ISC",
+  "name": "socket-chat-example",
+  "version": "0.0.1",
+  "description": "my first socket.io app",
   "dependencies": {
-    "net": "^1.0.2",
-    "ip": "^1.1.4",
-    "process": "^0.11.9"
+    "express": "^4.15.2",
+    "socket.io": "^1.7.3"
   },
-  "devDependencies": {
-    "@types/node": "^7.0.5"
+  "scripts": {
+    "start": "node index.js"
   }
 }
